--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "firebase": "^12.2.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
